--- a/app/views/users/dashboard/_opensource.html.erb
+++ b/app/views/users/dashboard/_opensource.html.erb
@@ -10,7 +10,8 @@
       <div class="grey-feed">
         <div class="row-fluid">
           <div class="span8">
-            <h4 style="line-height:20px;"><%= git.project_name %></h4>
+            <img src="/assets/git.png" style="float:left;"></img>
+            <h4 style="line-height:20px;float:left;margin-left: 5px;"><%= git.project_name %></h4>
           </div>
           <div class="span4" style="float:right;">
             <div style="float:right;margin-top: 10px;margin-right: 10px">
