--- a/app/views/widgets/_import_datas.html.erb
+++ b/app/views/widgets/_import_datas.html.erb
@@ -15,7 +15,7 @@
     <div class="grey-feed" style="height:35px;">
 
       <div class="float-left">
-        <%= image_tag '/assets/github.jpg',:style=>"width:autox;height:auto;" %>
+        <%= image_tag '/assets/git.png',:style=>"width:autox;height:auto;" %>
       </div>
       <div class="float-left margin-left-15">
         <%= link_to "Import Github", '/github/authorize'%>
