--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <ul class="nav">
             <li><%= link_to "About" , about_path %></li>
             <% if user_signed_in? %>
-             <li style="float:right;font-weight: bold;"><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+             <li style="margin-left: 750px;font-weight: bold;"><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
             <% end %>
           </ul>
         </div>
