some content changes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,6 +52,7 @@ font-family: 'open-sans';
 .form-horizontal .controls {
     margin-left: 260px;
 }
+
 input, textarea, .uneditable-input {
     width: 350px;
 }
@@ -66,4 +67,11 @@ min-height: 50px;
 padding-left: 20px;
 padding-right: 20px;
 background-color: rgba(0, 0, 0, 0.1);
+}
+
+abbr[title],
+abbr[data-original-title] {
+  cursor: help;
+  border-bottom: 1px dotted #999;
+  color: red;
 }
