--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -10,15 +10,25 @@
      <div style="font-size:25px;"><span>Hi..</span>
        <div class="cl-10"></div>
        <div style="font-size:19px;line-height: 30px;">
-         I am sreeharikmarar .. Working as a Ruby on Rails developer @ <a href="http://presciencesoft.com" >Prescience Soft Pvt Ltd</a>.<br/><br/>
-         My intention behind this site was to incorporate the main features of two well known sites like 
+         I am Sreehari k marar .. Working as a Ruby on Rails developer @ <a href="http://presciencesoft.com" >Prescience Soft Pvt Ltd</a>.<br/><br/>
+         My intention behind this site was to incorporate the main features of two well known sites,
          <a href="https://cvmkr.com/">cvmkr.com</a> and <a href="http://careers.stackoverflow.com/" > stackoverflow careers</a>.
-         Both the sites has their own unique functionalities & features . If one is giving more priority for the technical features
-         that we can include in professional cv making (though the careers is not intended for only resume making ), then the other one is giving more priority for the look and feel
-         that we can provide in cv making. Both the sites has done 100 percent perfection on what they intended to do.. But i thought,
-         what if a site can afford both the functionalities that these big giants are offering, like both technical easiness and the attractiveness
-         at one place.. so then the answer came with a name <a href="/">CV Builder</a> ...
+         Both the sites have their own unique functionalities & features. While <a href="http://careers.stackoverflow.com/" >Careers</a>
+         is giving more priority on utilizing currently available public APIs like Linkedin, Github, Bitbucket etc
+         in professional CV building, <a href="https://cvmkr.com/">cvmkr</a> is concentrating more on making a CV visually appealing.
+         <div class="cl-5"></div>
+         One fine day , i had a thought of combining the functionalities of both the sites, so that professional resume building becomes
+         more fast and convenient.
+         <div class="cl-5"></div>
+         
+         A few days of effort...<br/>
+         ...and the answer came with the name <a href="/">CV Builder</a>.
 
+         <div class="cl-5"></div>
+         <span style="font-weight: bold;text-align: center">"Both technical easiness and attractiveness at one place"</span>
+
+
+         <div class="cl-10"></div>
        </div>
        <div align="center" ><img src="/assets/line.png" width="250"></img></div>
      </div>
