--- a/app/views/users/dashboard/_basic_info.html.erb
+++ b/app/views/users/dashboard/_basic_info.html.erb
@@ -26,5 +26,7 @@
     </div>
     <div class="cl"></div>
   </div>
-<div class="cl"></div>
+<div class="cl-10"></div>
+<%= link_to("Edit"  , edit_basic_info_path , :remote => true , :style=>"float:right;") %>
+    <div class="cl-5"></div>
 </div>
