--- a/app/views/widgets/_create_pdf.html.erb
+++ b/app/views/widgets/_create_pdf.html.erb
@@ -1,6 +1,6 @@
 <div class="sidebar-container" style="height: 150px;;background-color: white;">
   <div class="header">
-    <p style="text-align:center;font-size: 18px;padding-top: 5px;">Create PDF</p>
+    <p style="text-align:center;font-size: 18px;padding-top: 5px;">Download / Share Your CV</p>
   </div>
   <div class="padding-5" >
     <div class="grey-feed" style="height:35px;">
@@ -8,7 +8,7 @@
         <%= image_tag '/assets/pdf_cv.jpg',:style=>"width:autox;height:auto;" %>
       </div>
       <div class="float-left margin-left-15">
-        <%= link_to "Download PDF CV", preview_path(current_user.id) %>
+        <%= link_to "Resume Preview", preview_path(current_user.id) %>
       </div>
 
     </div>
