--- a/app/views/layouts/after-login.html.erb
+++ b/app/views/layouts/after-login.html.erb
@@ -52,9 +52,9 @@
                <div style="text-align:center;font-size: 18px;font-family: 'Arvo-Regular';">Follow </div>
                <div align="center">
                  <div class="cl-20"></div>
-               <a href="#"><img src="/assets/icons/facebook.png" style="margin-left: 10px;"></img></a>
-               <a href="#"><img src="/assets/icons/linkedin.png" style="margin-left: 10px;"></img></a>
-               <a href="#"><img src="/assets/icons/twitter.png" style="margin-left: 10px;"></img></a>
+               <a href="https://www.facebook.com/sreehari.kmarar"><img src="/assets/icons/facebook.png" style="margin-left: 10px;"></img></a>
+               <a href="http://www.linkedin.com/pub/sreehari-k-m/44/717/559"><img src="/assets/icons/linkedin.png" style="margin-left: 10px;"></img></a>
+               <a href="https://twitter.com/sreeharikmarar"><img src="/assets/icons/twitter.png" style="margin-left: 10px;"></img></a>
                </div>
             </div>
             <div class="span4" style="float:left;border-left: 1px solid #fff;height:100px;">
