--- a/app/views/users/position/_edit.html.erb
+++ b/app/views/users/position/_edit.html.erb
@@ -35,7 +35,7 @@
     <%= f.input :summary, :as=>:text, :label =>"Summary", :input_html => {:value => @position.summary ? @position.summary : '' , :style=>"height:100px;" } %>
     <div class="cl-10"></div>
     <div class="cl-10"></div>
-    <%= f.submit "Save", :class=>"btn btn-info float-right margin-right-5", "data-loading-text"=>"SAving...", :onclick=>"$(this).button('loading');" %>
+    <%= f.submit "Save", :class=>"btn btn-info float-right margin-right-5", "data-loading-text"=>"Saving...", :onclick=>"$(this).button('loading');" %>
 
 
 
