--- a/app/views/download/sections/classic/_education.html.erb
+++ b/app/views/download/sections/classic/_education.html.erb
@@ -24,7 +24,7 @@
         </div>
         <div class="" style="float:right;width: 160px;">
           <div class="cv-date">
-            <% if edu.start_date && edu.end_date %>
+            <% if !edu.start_date.blank? && !edu.end_date.blank? %>
               <div><%= edu.start_date %> to <%= edu.end_date %></div>
             <% end %>
           </div>
