--- a/app/views/download/sections/simple/_basic_info.html.erb
+++ b/app/views/download/sections/simple/_basic_info.html.erb
@@ -1,20 +1,26 @@
 <div class="span10" style="font-size:20px;width:920px;margin-left: 10px;margin-right:10px;">
 
-  <div><b>Email: </b><%= linkedin_details && linkedin_details.email ? linkedin_details.email : current_user.email %></div>
+  <div>
+    <% if linkedin_details && linkedin_details.email %>
+    <b>Email: </b><%= linkedin_details.email %>
+    <% else %>
+  <b>Email: </b><%= current_user.email %>
+    <% end %>
+  </div>
   <div class="cl-4"></div>
-  <% if linkedin_details && linkedin_details.personal_website %>
+  <% if linkedin_details && !linkedin_details.personal_website.blank? %>
     <div><b>Website : </b><%= link_to "#{linkedin_details.personal_website}" , linkedin_details.personal_website , :style=>"color:blue;" %></div>
     <div class="cl-4"></div>
   <% end %>
-  <% if linkedin_details && linkedin_details.public_profile_url %>
+  <% if linkedin_details && !linkedin_details.public_profile_url.blank? %>
     <div><b>Linkedin : </b> <%= link_to "#{linkedin_details.public_profile_url}" , linkedin_details.public_profile_url , :style=>"color:blue;"%></div>
     <div class="cl-4"></div>
   <% end %>
-  <% if linkedin_details && linkedin_details.phone_number %>
+  <% if linkedin_details && !linkedin_details.phone_number.blank? %>
     <div><b>Phone : </b> <%= linkedin_details.phone_number %></div>
     <div class="cl-4"></div>
   <% end %>
-    <% if linkedin_details && linkedin_details.main_address  %>
+    <% if linkedin_details && !linkedin_details.main_address.blank?  %>
   <div><b>Address : </b><%= linkedin_details.main_address %></div>
   <% end %>
   <div class="cl-4"></div>
