--- a/app/views/users/dashboard/_education.html.erb
+++ b/app/views/users/dashboard/_education.html.erb
@@ -12,10 +12,10 @@
           </div>
           <div class="span3" style="float:right">
             <div style="float:right;margin-top: 10px;margin-right: 10px">
-            <% if edu.start_date && edu.end_date %>
-            <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.start_date %> to <%= edu.end_date %></p>
-            <% end %>
-          </div>
+              <% if !edu.start_date.blank? && !edu.end_date.blank? %>
+                <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.start_date %> to <%= edu.end_date %></p>
+              <% end %>
+            </div>
           </div>
         </div>
         <p style="color:#4B4B4B;font-size: 16px;font-style: italic"><%= edu.school_name %></p>
@@ -30,5 +30,5 @@
     <div class="cl-30"></div>
   <% end %>
 </div>
- <div class="cl-30"></div>
+<div class="cl-30"></div>
 
