--- a/app/views/download/theme/_classic.html.erb
+++ b/app/views/download/theme/_classic.html.erb
@@ -17,7 +17,11 @@ end
 
   <!-- Name -->
   <div class="span10" style="width:920px;margin-left: 10px;margin-right:10px;">
+     <% if @linkedin_details && (@linkedin_details.first_name || @linkedin_details.last_name) %>
+    <h1 class="cv-title" style="text-align:left;font-size: 50px;margin-top: 20px;"><b><%= "#{@linkedin_details.first_name}"+"#{@linkedin_details.last_name}" %></b></h1>
+    <% else %>
     <h1 class="cv-title" style="text-align:left;font-size: 50px;margin-top: 20px;"><b><%= @user.name %></b></h1>
+    <% end %>
     <div class="cl-10"></div>
     <div style="border-bottom:2px solid #000;"></div>
     <div class="cl-15"></div>
