--- a/app/views/download/theme/_simple.html.erb
+++ b/app/views/download/theme/_simple.html.erb
@@ -16,8 +16,11 @@ end
      box-shadow:1px 1px 20px #c1c1c1; color:#000;width:950px;background-color: #fff;">
 
   <!-- Name -->
-
+  <% if @linkedin_details && (@linkedin_details.first_name || @linkedin_details.last_name) %>
+  <h1 style="text-align:center;font-size: 40px;margin-top: 30px;"><%= "#{@linkedin_details.first_name}"+"#{@linkedin_details.last_name}" %></h1>
+  <% else %>
   <h1 style="text-align:center;font-size: 40px;margin-top: 30px;"><%= @user.name %></h1>
+  <% end %>
   <div class="cl-15"></div>
 
   <!-- Name -->
