--- a/app/views/list_users/index.html.erb
+++ b/app/views/list_users/index.html.erb
@@ -3,7 +3,7 @@
      <% if @users.any? %>
   <h3 align="center">Cv builder Users</h3>
        <% @users.each_with_index do |user,index| %>
-      <div class="well" style="float:left;min-height:130px;margin:10px;min-width: 400px;">
+      <div class="well" style="float:left;min-height:130px;margin-left:30px;margin-bottom: 10px;margin-top: 10px;min-width: 380px;">
           <% if user.image %>
             <div style="float:left;">
               <img width="100" height="120" src="<%= user.image %>"></img>
