--- a/app/views/users/dashboard/_opensource.html.erb
+++ b/app/views/users/dashboard/_opensource.html.erb
@@ -1,6 +1,6 @@
 
 <div class="raw-fluid padding-left-10">
-  <h2 class="heading" style="line-height: 5px;font-size: 20px">Open Source</h2>
+  <h2 class="heading" style="line-height: 5px;font-size: 20px">Github Projects</h2>
   <div style="border-bottom: solid #ccc 1.5px;"></div>
 
   <div class="cl-10"></div>
